Split Modules